@@ -31,3 +31,8 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+test {
+    useJUnitPlatform()
+    jvmArgs('-XX:+EnableDynamicAgentLoading')
+}
